--- a/src/pages/quiz.astro
+++ b/src/pages/quiz.astro
@@ -14,5 +14,5 @@ if (!isAuthenticated && !isMockedAuth) {
 ---
 
 <Layout>
-  <QuizView client:only="react" />
+  <QuizView client:load />
 </Layout>
